# GreenGrid_Forecast

./: .env.example  .gitignore  APIs.txt  Dockerfile.airflow  Dockerfile.streamlit  LICENSE.txt  README.md  docker-compose.yml  pyproject.toml  requirements.txt  services.md
airflow/: Dockerfile  docker-compose.yml
airflow/dags/: etl_pipeline.py  extract_entsoe_dag.py  extract_weather_dag.py  forecast_pipeline.py  hello.py  merge_train_features_data_dag.py  run_dashboard_placeholder_dag.py  train_features_data_merger_dag.py  train_model_dag.py  train_model_pipeline.py  transform_forecast_dag.py  transform_generation_dag.py
airflow/dags/utils/extract/: featch_weather_data.py  universal_entsoe_data_featcher.py
airflow/dags/utils/forecast/: forecast.py
airflow/dags/utils/train/: prepare_data_to_train.py  train_model.py
airflow/dags/utils/utils/: forecast_utils.py
app/: streamlit_app.py
config/: entsoe_requests.json
docs/: progress.md  readme_dev_setup.md  services.md
docs/tech-notes/: 2024-08-13_env-snapshot.md
models/saved_models/: linear_regression_model.joblib
prediction_service/: Dockerfile
prediction_service/app/: config.py  main.py  models.py  schemas.py  utils.py
presentation/: project_description_pl.md
schemas/: benchmark.json  forecast.json  train_features.json
scripts/: run_local_prediction.py  test_api.py
services/airflow/: Dockerfile.airflow
services/airflow/dags/: etl_pipeline.py  forecast_pipeline.py  train_model_pipeline.py
services/prediction_service/: Dockerfile
services/prediction_service/app/: schemas.py  utils.py
services/ui/: app.py
services/ui/components/: chart.py  header.py
services/ui/services/: api_client.py  data_service.py
src/extract/: check_entsoe_api_combinations.py  entsoe_api.py  featch_entsoe_data.py  featch_weather_data.py  universal_entsoe_data_featcher.py
src/transform/: entsoe_forecast_parser.py  entsoe_generation_parser.py  entsoe_installed_capacity_parser.py  train_features_data_merger.py
src/utils/: compare_forecasts.py  forecast_utils.py  prepare_data_to_train.py  train_model.py  trainer.py
ui/: app.py  config.py  utils.py
ui/components/: chart.py  selectors.py
ui/utils/: data_loader.py  mock_generator.py
utils/: schema_validator.py
(+11 files in other folders)
